
Mapping
---------------------
[*] Key "F7" is now key bound to toggle fullbright on/off.
[*] Key "7" is now key bound to "nextclosestent" - it gets typo'd all the time.
[*] entproperty now works in MP coop, but buffered.
[*] Textures can now have a non-default scale, definable through the texture command.
[*] Multiple selections support

Rendering / HUD / ...
---------------------

[*] Now using ANIM_REVERSE for playermodels going backward.
[*] Fixed flag icon transparency.
[*] Nearplane fix.
[*] screenshotscale - in-engine scaling of screenshots.
[*] showtargetname - turns on/off showing the player name on the HUD when in your crosshair.
[*] Scoreboard doesn't show ping/score/pj in singleplayer
[*] showspeed - turns speed indicator on/off

Physics
---------------------

[*] New "flyspeed" variable for determining how much to multiply your fly speeds by. (Range: 1.0...5.0)
[*] Jump/Crouch raises or lowers the camera in editmode, release to stop.

Demos / Spectating
---------------------

[*] Drop camera to previous followed player position when switching to fly specmode.
[*] Fix broken demo-viewer not able to change to SPECTATOR.
[*] Servers now choose a unique file name for the temporary demo file ("demorecord_<IP/local>_<port>")
[*] Hitsound while spectating

Sounds / Audio
---------------------
[*] Optional heartbeat sound when health reaches a certain level.

Menus
---------------------
[*] New menuitems in the Keyboard menu, for looking up keybinds, and enabling/disabling the old editing binds system.
[*] New menuitems in the gameplay settings menu, for setting fly velocities, and the color that your name is highlighted in, when it appears on the console via chat. (HIGHLIGHT)
[*] New updated kick/ban/reason menu with client statistics. (Reports teamkills as well.)

Bots
---------------------

[*] New scripted "bot survival mode".
[*] Bots in plclips bug fixed.
[*] Bots now actually fire the carbine.
[*] Bots can switch to, and use pistol, knife or grenades.